@@ -1,7 +1,5 @@
 package uk.m0nom.adifproc.geocoding;
 
-import fr.dudie.nominatim.client.JsonNominatimClient;
-import fr.dudie.nominatim.model.Address;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.http.impl.client.HttpClientBuilder;
 import org.springframework.stereotype.Service;
@@ -10,10 +8,12 @@ import uk.m0nom.adifproc.coords.LocationAccuracy;
 import uk.m0nom.adifproc.coords.LocationSource;
 import uk.m0nom.adifproc.qrz.QrzCallsign;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.io.IOException;
 import java.util.Date;
 import java.util.List;
-import java.util.logging.Logger;
 
 /**
  * Use the Open Streetmap Nominatim API to try and determine a station's location based on a full or
@@ -23,7 +23,7 @@ import java.util.logging.Logger;
 public class NominatimGeocodingProvider implements GeocodingProvider {
     private final static long DELAY = 1000L;
 
-    private static final Logger logger = Logger.getLogger(NominatimGeocodingProvider.class.getName());
+    private static final Logger logger = LoggerFactory.getLogger(NominatimGeocodingProvider.class);
     private long lastTimestamp;
 
     /** Cache is static and lasts for the lifetime of the application on the server */
@@ -38,21 +38,27 @@ public class NominatimGeocodingProvider implements GeocodingProvider {
         GeocodingResult result = null;
 
         String addressToCheck = addressStringFromQrzData(qrzData);
+        logger.debug("getLocationFromAddress called for callsign: {}, constructed address: {}", qrzData.getCall(), addressToCheck);
         if (addressToCheck != null) {
             result = cache.get(addressToCheck);
             if (result == null) {
+                logger.debug("Cache miss for address: {}, querying Nominatim", addressToCheck);
                 result = queryUsingAddressSubstring(qrzData.getCall(), addressToCheck);
                 // Stick in the cache with the original search string
                 cache.put(addressToCheck, result);
+                logger.debug("Cached result for address: {}, result: {}", addressToCheck, result);
             } else {
-                logger.info(String.format("Geocoding cache hit for address: %s", addressToCheck));
+                logger.info("Geocoding cache hit for address: {}", addressToCheck);
             }
+        } else {
+            logger.debug("No address could be constructed from QRZ data for callsign: {}", qrzData.getCall());
         }
         return result;
     }
 
     @Override
     public GeocodingResult getLocationFromAddress(String address) throws IOException, InterruptedException {
+        logger.debug("getLocationFromAddress called with raw address: {}", address);
         return queryUsingAddressSubstring("CoordinateConverterController", address);
     }
 
@@ -63,6 +69,8 @@ public class NominatimGeocodingProvider implements GeocodingProvider {
         searchString = addIfNotNull(searchString, qrzData.getAddr2());
         searchString = addIfNotNull(searchString, qrzData.getCounty());
         searchString = addIfNotNull(searchString, qrzData.getCountry());
+        logger.debug("QRZ address fields - addr1: {}, addr2: {}, county: {}, country: {}, combined: {}",
+                qrzData.getAddr1(), qrzData.getAddr2(), qrzData.getCounty(), qrzData.getCountry(), searchString);
         if (searchString.length() > 2) {
             searchString = searchString.substring(2);
             addressToCheck = searchString.replace(",,", ",");
@@ -74,19 +82,23 @@ public class NominatimGeocodingProvider implements GeocodingProvider {
         String substring = addressToCheck;
         GlobalCoords3D coords = null;
         int accuracy = 0;
+        logger.debug("queryUsingAddressSubstring started for callsign: {}, address: {}", callsign, addressToCheck);
         while (StringUtils.isNotBlank(substring) && coords == null) {
             // Start cutting down the address, with the most specific information first
             coords = addressSearch(callsign, substring, accuracy++);
             if (coords == null) {
                 String newSubstring = StringUtils.trim(substring.substring(substring.indexOf(',') + 1));
                 // Make sure we don't get caught in an endless loop.
-                if (StringUtils.equals(newSubstring, substring)) {
+                if (newSubstring != null && newSubstring.equals(substring)) {
+                    logger.debug("No location found after exhausting address substrings, last tried: {}", substring);
                     return new GeocodingResult(null, substring, "No location found");
                 } else {
+                    logger.debug("No match for '{}', trimming to: '{}'", substring, newSubstring);
                     substring = newSubstring;
                 }
             }
         }
+        logger.debug("queryUsingAddressSubstring result for {}: coords={}, matchedAddress={}", callsign, coords, substring);
         return new GeocodingResult(coords, substring, null);
     }
 
@@ -94,19 +106,22 @@ public class NominatimGeocodingProvider implements GeocodingProvider {
         long timeDiff = new Date().getTime() - lastTimestamp;
         if (timeDiff < DELAY) {
             long pause = DELAY - timeDiff;
-            // Ensure at least a second between calls to comply with fair usage policy
-            //logger.info(String.format("Pausing for a %d ms to comply with NominatimGeocodingProvider fair usage policy", pause));
+            logger.debug("Pausing for {} ms to comply with Nominatim fair usage policy", pause);
             Thread.sleep(pause);
         }
-        logger.info(String.format("Searching for a location for %s based on address search string: %s", callsign, searchString));
+        logger.info("Searching for a location for {} based on address search string: {}", callsign, searchString);
         List<Address> addressMatches = new JsonNominatimClient(HttpClientBuilder.create().build(), "mark@wickensonline.co.uk").search(StringUtils.trim(searchString));
         lastTimestamp = java.time.Instant.now().toEpochMilli();
+        logger.debug("Nominatim returned {} address matches for search: {}", addressMatches.size(), searchString);
 
         if (!addressMatches.isEmpty()) {
-            Address match = addressMatches.get(0);
+            Address match = addressMatches.getFirst();
             LocationAccuracy locationAccuracy = getLocationAccuracy(accuracy);
+            logger.debug("Best match: displayName={}, lat={}, lon={}, accuracy={}",
+                    match.getDisplayName(), match.getLatitude(), match.getLongitude(), locationAccuracy);
             return new GlobalCoords3D(match.getLatitude(), match.getLongitude(), LocationSource.GEOCODING, locationAccuracy);
         }
+        logger.debug("No address matches returned from Nominatim for: {}", searchString);
         return null;
     }
 
